--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="C:\Users\theol\Desktop\Thalles SENAI\Site Thalles\10calculadora\css\style.css">
+		<link rel="stylesheet" href=".\css\style.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-		<script src="C:\Users\theol\Desktop\Thalles SENAI\Site Thalles\10calculadora\js\calculadora.js"></script>
+		<script src=".\js\calculadora.js"></script>
 		<title>Calculadora</title>
 	</head>
 
