--- a/index.html
+++ b/index.html
@@ -11,9 +11,21 @@
 
 	<body>
 	<div class="degrade">
-	<h1>Thalles Alexandre</h1>
+	<div class="outer-container">
+			<div class="social-icons">
+				
+				<a href="https://www.linkedin.com/in/thalles-alexandre-2120431a6/" target="_blank"> <i class="fab fa-linkedin"></i></a>
+				<a href="https://thallesalexandrevieira.github.io/ThallesAlexandrevieira-ThallesAlexandrevieira-Site_completo_front-end/sobre%20mim.html" target="_blank"><i class="fas fa-globe"></i></a>
+				<a href="https://github.com/ThallesAlexandrevieira" target="_blank"><i class="fab fa-github"></i></a>
+				<a href="https://www.instagram.com/tavc02/" target="_blank"><i class="fab fa-instagram"></i></a>
+				<a href="mailto:tavc02@gmail.com?subject=Fale%20Conosco"><i class="far fa-envelope"></i></a>
+				<a href="https:wa.me/+5521986493782" target="_blank" class="whatsapp-link"><i class="fab fa-whatsapp"></i></a>
+			</div>
+		</div>
+		<br><br><br>
+	<h1>Calculadora</h1>
 		<div class="calculadora">
-			<h2>Calculadora</h2>
+			<h2></h2>
 			<p id="resultado"></p>
 			<table> 
 				<tr>
@@ -62,15 +74,12 @@
 	</body>
 
 	<footer>
-	<table>
-	<tr>
-				<td><br><br><br> Desenvolvido por<a
-						href="https://thallesalexandrevieira.github.io/ThallesAlexandrevieira-ThallesAlexandrevieira-Site_completo_front-end/contato.html">
+	
+				<br> Desenvolvido por<a class="font" href="https://thallesalexandrevieira.github.io/ThallesAlexandrevieira-ThallesAlexandrevieira-Site_completo_front-end/contato.html">
 						Thalles Alexandre Vieira Coimbra</a> no Curso de Programador Front-End com
-					o Prof.<a href="https://github.com/sammyfreitas">Anthony Freitas</a> Todos os direitos reservados -
+					o Prof.<a class="font" href="https://github.com/sammyfreitas">Anthony Freitas</a> Todos os direitos reservados -
 					Senai Maracanã - 2023 </td>
-			</tr>
-			</table>
+					
 	</footer>
 
 </html> 
